--- a/main.css
+++ b/main.css
@@ -1,20 +1,61 @@
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+body {
+    width: 100%;
+    margin: 0 auto;
+}
+
+main {
+    padding-top: 100px;
 }
 
 nav {
     width: 100%;
-    background-color: grey;
+    background-color: #2da887;
     position: fixed;
     top: 0;
     left: 0;
+    font-family: 'Ultra', serif;
+    font-size: 24px;
+
+
 }
 
+nav ul {
+    list-style: none;
+    padding-left: 0;
+    padding-bottom: 2px;
+}
+
+.nav-bar-top {
+    padding-left: 8px
+}
+.nav-bar-bottom {
+    position: absolute;
+    right: 8px;
+}
 
 header {
-    padding-top: 60px;
-    font-size: 15px;
     padding-bottom: 15px;
+}
+
+header h1 {
+    font-size: 25px;
+    text-align: center;
+    font-family: 'Montserrat'
+}
+
+.hero-symbols {
+    color: #a82d3d;
+}
+
+p {
+    font-family: 'Montserrat';
+    text-indent: 8px;
+    padding-left: 8px;
 }
 
 .button-group-main {
@@ -32,13 +73,36 @@ header {
 
 .main-button {
     margin-bottom: 20px;
-    width: 70%;
+    width: 85%;
     height: 60px;
     font-size: 30px;
+    background-color: #a8622d;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-style: italic;
+    border: 1px solid black;
 }
 
+hr {
+    width: 80%;
+    border: 1px solid #a82d3d;
+}
+
+#bio {
+    padding-top: 100px;  
+}
+
+#portfolio {
+    padding-top: 100px;
+}
 #portfolio h2 {
     text-align: center;
+    font-family: 'Ultra'
+}
+
+h3 {
+    text-align: center;
+    font-family: 'Ubuntu';
 }
 
 .portfolio-image-container {
@@ -73,6 +137,8 @@ header {
 
 footer {
     text-align: center;
+    background-color: #2da887;
+    font-family: 'Montserrat';
 }
 
 @media only screen and (min-width: 750px) {
