small styling changes

--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ p {
 .button-link {
     text-align: center;
     width: 80%;
+    cursor: default;
 }
 
 .main-button {
@@ -81,6 +82,7 @@ p {
     font-weight: 600;
     font-style: italic;
     border: 1px solid black;
+    cursor: pointer;
 }
 
 hr {
@@ -116,7 +118,9 @@ h3 {
 
 .portfolio-links {
     text-align: center;
+    cursor: pointer;
 }
+
 
 #contact {
     text-align: center;
@@ -128,6 +132,11 @@ h3 {
     justify-content: space-evenly;
     list-style: none;
     padding: 0;
+}
+
+.contact-icons {
+    width: 45px;
+    cursor: pointer;
 }
 
 .headshot {
