--- a/main.css
+++ b/main.css
@@ -10,39 +10,43 @@ body {
 
 main {
     padding-top: 100px;
+    padding-left: 6px;
+    padding-right: 6px;
 }
 
-nav {
+header {
     width: 100%;
+    height: 81px;
     background-color: #2da887;
     position: fixed;
     top: 0;
     left: 0;
     font-family: 'Ultra', serif;
     font-size: 24px;
-
+    
 
 }
 
-nav ul {
-    list-style: none;
-    padding-left: 0;
-    padding-bottom: 2px;
+header div {
+    padding-top: 24px;
 }
 
-.nav-bar-top {
-    padding-left: 8px
+.header-top {
+    padding-left: 8px;
+    display: block;
 }
-.nav-bar-bottom {
+
+.header-bottom {
     position: absolute;
     right: 8px;
+    display: block;
 }
 
-header {
+.hero {
     padding-bottom: 15px;
 }
 
-header h1 {
+.hero h1 {
     font-size: 25px;
     text-align: center;
     font-family: 'Montserrat'
@@ -94,6 +98,15 @@ hr {
     padding-top: 100px;  
 }
 
+.headshot-container {
+    text-align: center;
+}
+
+.headshot {
+    height: 300px;
+    margin-bottom: 40px;
+}
+
 #portfolio {
     padding-top: 100px;
 }
@@ -125,13 +138,33 @@ h3 {
 #contact {
     text-align: center;
     padding-bottom: 30px;
+    padding-top: 100px;
 }
+
+.scroll-top {
+    width: 45px;
+    height: 45px;
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    display: none;
+    background-color: #a82d3d;
+  }
+
+  .scroll-top span {
+    display: inline-block;
+    color: #fff;
+    font-size: 16px;
+  }
 
 .contact-buttons {
     display: flex;
-    justify-content: space-evenly;
-    list-style: none;
+    justify-content: center;
     padding: 0;
+}
+
+.contact-buttons span {
+    margin-right: 10px;
 }
 
 .contact-icons {
@@ -139,16 +172,13 @@ h3 {
     cursor: pointer;
 }
 
-.headshot {
-    height: 300px;
-    margin-bottom: 40px;
-}
 
 footer {
     text-align: center;
     background-color: #2da887;
     font-family: 'Montserrat';
 }
+
 
 @media only screen and (min-width: 750px) {
     /* why won't this work properly? */
