--- a/main.css
+++ b/main.css
@@ -1,171 +1,240 @@
 * {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
-    width: 100%;
-    margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
 }
 
 main {
-    padding-top: 100px;
-    padding-left: 6px;
-    padding-right: 6px;
+  padding-top: 100px;
+  padding-left: 6px;
+  padding-right: 6px;
 }
 
 header {
-    width: 100%;
-    height: 81px;
-    background-color: #2da887;
-    position: fixed;
-    top: 0;
-    left: 0;
-    font-family: 'Ultra', serif;
-    font-size: 24px;
-    
-
+  width: 100%;
+  height: 81px;
+  background-color: #2da887;
+  position: fixed;
+  top: 0;
+  left: 0;
+  font-family: "Ultra", serif;
+  font-size: 24px;
 }
 
 header div {
-    padding-top: 24px;
+  padding-top: 24px;
 }
 
 .header-top {
-    padding-left: 8px;
-    display: block;
+  padding-left: 8px;
+  display: block;
 }
 
 .header-bottom {
-    position: absolute;
-    right: 8px;
-    display: block;
+  position: absolute;
+  right: 8px;
+  display: block;
 }
 
 .hero {
-    padding-bottom: 15px;
+  padding-bottom: 15px;
 }
 
 .hero h1 {
-    font-size: 25px;
-    text-align: center;
-    font-family: 'Montserrat'
+  font-size: 25px;
+  text-align: center;
+  font-family: "Montserrat";
 }
 
 .hero-symbols {
-    color: #a82d3d;
+  color: #a82d3d;
 }
 
 p {
-    font-family: 'Montserrat';
-    text-indent: 8px;
-    padding-left: 8px;
+  font-family: "Montserrat";
+  text-indent: 8px;
+  padding-left: 8px;
 }
 
 .button-group-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 20px;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
 }
 
 .button-link {
-    text-align: center;
-    width: 80%;
-    cursor: default;
+  text-align: center;
+  width: 80%;
+  cursor: default;
 }
 
 .main-button {
-    margin-bottom: 20px;
-    width: 85%;
-    height: 60px;
-    font-size: 30px;
-    background-color: #a8622d;
-    font-family: 'Montserrat';
-    font-weight: 600;
-    font-style: italic;
-    border: 1px solid black;
-    cursor: pointer;
+  margin-bottom: 20px;
+  width: 85%;
+  height: 60px;
+  font-size: 30px;
+  background-color: #a8622d;
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-style: italic;
+  border: 1px solid black;
+  cursor: pointer;
 }
 
 hr {
-    width: 80%;
-    border: 1px solid #a82d3d;
+  width: 80%;
+  border: 1px solid #a82d3d;
 }
 
 #bio {
-    padding-top: 100px;  
+  padding-top: 100px;
 }
 
 .headshot-container {
-    text-align: center;
+  text-align: center;
 }
 
 .headshot {
-    height: 300px;
-    margin-bottom: 40px;
+  height: 300px;
+  margin-bottom: 40px;
 }
 
 #portfolio {
-    padding-top: 100px;
-    padding-bottom: 40px;
+  padding-top: 100px;
+  padding-bottom: 40px;
 }
 #portfolio h2 {
-    text-align: center;
-    font-family: 'Ultra'
+  text-align: center;
+  font-family: "Ultra";
 }
 
 .portfolio-project {
-    margin-bottom: 70px;
-    display: flex;
-    flex-direction: column;
+  margin-bottom: 70px;
+  display: flex;
+  flex-direction: column;
 }
 
 h3 {
-    text-align: center;
-    font-family: 'Ubuntu';
+  text-align: center;
+  font-family: "Ubuntu";
 }
 
 .portfolio-image-container {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 
 .portfolio-image {
-    width: 100%;
+  /* width: 100%; */
+  /* max-height: 50vh;
+  width: 90% */
+  max-width: 100%;
+  max-height: 50vh
 }
 
 .icon-container {
-    text-align: center;
+  text-align: center;
 }
 
 .tech-icon {
-    height: 25px;
-    width: 25px;
+  height: 25px;
+  width: 25px;
 }
 
 .portfolio-links {
-    text-align: center;
-    cursor: pointer;
+  text-align: center;
+  cursor: pointer;
 }
 
 .portfolio-links a {
-    text-decoration: none;
-    color: #a82d3d;
-    font-weight: bold;
+  text-decoration: none;
+  color: #a82d3d;
+  font-weight: bold;
 }
 
-
 #contact {
-    text-align: center;
-    padding-bottom: 30px;
-    padding-top: 40px;
+  text-align: center;
+  padding-bottom: 30px;
+  padding-top: 40px;
 }
 
 .scroll-top {
-    width: 45px;
-    height: 45px;
+  width: 45px;
+  height: 45px;
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  display: none;
+  background-color: #a82d3d;
+}
+
+.scroll-top span {
+  display: inline-block;
+  color: #fff;
+  font-size: 16px;
+}
+
+.scroll-top:hover {
+  cursor: pointer;
+}
+
+.contact-buttons {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+}
+
+.contact-buttons span {
+  margin-right: 10px;
+}
+
+.contact-icons {
+  width: 45px;
+  cursor: pointer;
+}
+
+footer {
+  text-align: center;
+  background-color: #2da887;
+  font-family: "Montserrat";
+}
+
+@media only screen and (min-width: 750px) {
+  header {
+    height: 108px;
+    font-size: 35px;
+  }
+
+  main {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .button-link {
+    width: 70%;
+  }
+
+  .headshot {
+    float: left;
+    margin-right: 40px;
+  }
+
+  .portfolio-image {
+    max-height: none;
+  }
+
+  p {
+    font-size: 18px;
+  }
+
+  .scroll-top {
+    width: 60px;
+    height: 60px;
     position: fixed;
     bottom: 25px;
     right: 25px;
@@ -176,105 +245,31 @@ h3 {
   .scroll-top span {
     display: inline-block;
     color: #fff;
-    font-size: 16px;
+    font-size: 20px;
   }
-
-  .scroll-top:hover {
-      cursor: pointer;
-  }
-
-.contact-buttons {
-    display: flex;
-    justify-content: center;
-    padding: 0;
-}
-
-.contact-buttons span {
-    margin-right: 10px;
-}
-
-.contact-icons {
-    width: 45px;
-    cursor: pointer;
-}
-
-
-footer {
-    text-align: center;
-    background-color: #2da887;
-    font-family: 'Montserrat';
-}
-
-
-@media only screen and (min-width: 750px) {
-
-    header {
-        height: 108px;
-        font-size: 35px;
-    }
-
-    main {
-        padding-left: 70px;
-        padding-right: 70px;
-    }
-
-    .button-link {
-        width: 70%;
-    }
-
-    .headshot {
-        float: left;
-        margin-right: 40px;
-    }
-
-
-    .portfolio-image {
-        width: 60%;
-    }
-
-    p {
-        font-size: 18px;
-    }
-
-    .scroll-top {
-        width: 60px;
-        height: 60px;
-        position: fixed;
-        bottom: 25px;
-        right: 25px;
-        display: none;
-        background-color: #a82d3d;
-      }
-    
-      .scroll-top span {
-        display: inline-block;
-        color: #fff;
-        font-size: 20px;
-      }
 }
 
 @media only screen and (min-width: 1100px) {
+  .main-button {
+    margin-bottom: 40px;
+    height: 80px;
+  }
 
-    .main-button {
-        margin-bottom: 40px;
-        height: 80px;
-    }
-
-    .button-link {
-        width: 60%;
-    }
+  .button-link {
+    width: 60%;
+  }
 }
 
 @media only screen and (min-width: 1500px) {
-    .header-top {
-        padding-left: 200px;
-    }
+  .header-top {
+    padding-left: 200px;
+  }
 
-    .header-bottom {
-        right: 200px;
-    }
+  .header-bottom {
+    right: 200px;
+  }
 
-    p {
-        padding: 0 200px 0 200px;
-    }
+  p {
+    padding: 0 200px 0 200px;
+  }
 }
