--- a/main.css
+++ b/main.css
@@ -134,7 +134,7 @@ h3 {
   /* max-height: 50vh;
   width: 90% */
   max-width: 100%;
-  max-height: 50vh
+  max-height: 50vh;
 }
 
 .icon-container {
@@ -186,6 +186,7 @@ h3 {
 .contact-buttons {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 0;
 }
 
